# libfso-glib

./: .gitignore  AUTHORS  CHANGELOG.md  ChangeLog  Makefile.am  NEWS  README  TODO  autogen.sh  configure.ac  fso-glib-1.0.pc.in  libfso-glib.pc.in
docs/: Makefile.am
fso-glib/: Makefile.am
specs/: Makefile.am
src/: Makefile.am  freedesktop-gypsy.vala  freesmartphone-data.vala  freesmartphone-device.vala  freesmartphone-gsm.vala  freesmartphone-pim.vala  freesmartphone-time.vala  freesmartphone-utils.vala  freesmartphone.vala  fso-dbus-interfaces.vala  fso-glib-1.0.deps  fso-glib-1.0.vapi
tools/: Makefile.am  makedoc.py
