generated_docs = \
	org.freesmartphone.Audio.Manager.html \
	org.freesmartphone.Context.Client.html \
	org.freesmartphone.Context.Manager.html \
	org.freesmartphone.Data.World.html \
	org.freesmartphone.Device.AmbientLight.html \
	org.freesmartphone.Device.Audio.html \
	org.freesmartphone.Device.Display.html \
	org.freesmartphone.Device.IdleNotifier.html \
	org.freesmartphone.Device.Info.html \
	org.freesmartphone.Device.Input.html \
	org.freesmartphone.Device.LED.html \
	org.freesmartphone.Device.Orientation.html \
	org.freesmartphone.Device.PowerControl.html \
	org.freesmartphone.Device.PowerSupply.html \
	org.freesmartphone.Device.Proximity.html \
	org.freesmartphone.Device.RealtimeClock.html \
	org.freesmartphone.Device.Vibrator.html \
	org.freesmartphone.Error.html \
	org.freesmartphone.Events.html \
	org.freesmartphone.GSM.CallForwarding.html \
	org.freesmartphone.GSM.Call.html \
	org.freesmartphone.GSM.CB.html \
	org.freesmartphone.GSM.Debug.html \
	org.freesmartphone.GSM.Device.html \
	org.freesmartphone.GSM.Error.html \
	org.freesmartphone.GSM.HZ.html \
	org.freesmartphone.GSM.Monitor.html \
	org.freesmartphone.GSM.MUX.html \
	org.freesmartphone.GSM.Network.html \
	org.freesmartphone.GSM.PDP.html \
	org.freesmartphone.GSM.SIM.html \
	org.freesmartphone.GSM.SMS.html \
	org.freesmartphone.GSM.VoiceMail.html \
	org.freesmartphone.Info.html \
	org.freesmartphone.Network.html \
	org.freesmartphone.Notification.html \
	org.freesmartphone.Phone.Call.html \
	org.freesmartphone.Phone.html \
	org.freesmartphone.PIM.Call.html \
	org.freesmartphone.PIM.CallQuery.html \
	org.freesmartphone.PIM.Calls.html \
	org.freesmartphone.PIM.Contact.html \
	org.freesmartphone.PIM.ContactQuery.html \
	org.freesmartphone.PIM.Contacts.html \
	org.freesmartphone.PIM.Date.html \
	org.freesmartphone.PIM.DateQuery.html \
	org.freesmartphone.PIM.Dates.html \
	org.freesmartphone.PIM.Fields.html \
	org.freesmartphone.PIM.Message.html \
	org.freesmartphone.PIM.MessageQuery.html \
	org.freesmartphone.PIM.Messages.html \
	org.freesmartphone.PIM.Note.html \
	org.freesmartphone.PIM.NoteQuery.html \
	org.freesmartphone.PIM.Notes.html \
	org.freesmartphone.PIM.Task.html \
	org.freesmartphone.PIM.TaskQuery.html \
	org.freesmartphone.PIM.Tasks.html \
	org.freesmartphone.PIM.Types.html \
	org.freesmartphone.Preferences.html \
	org.freesmartphone.Preferences.Service.html \
	org.freesmartphone.Resource.html \
	org.freesmartphone.Time.Alarm.html \
	org.freesmartphone.Usage.html

EXTRA_DIST = \
	index.html \
	index.html.in \
	pim-intro.html \
	README \
	style.css \
	usage-intro.html \
	$(generated_docs)

MAINTAINERCLEANFILES = \
	Makefile.in \
	$(generated_docs)
